// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications: index component with application data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Applications
    applications={
      Array [
        Object {
          "address": "e80b681c42f831ea3c4b8db531f5e165",
          "appName": "dAPP",
          "isLoading": true,
          "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
          "version": "1.0",
        },
      ]
    }
    fetchApplications={[Function]}
    location={
      Object {
        "search": "?developer",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row smd-pad-12"
        >
          <div
            className="col-sm-6"
          >
            <h3>
              Apps
            </h3>
          </div>
          <div
            className="col-sm-6 text-right"
          />
        </div>,
        <div>
          <withRouter(Connect(ApplicationCard))
            app={
              Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              }
            }
          />
        </div>,
        <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark cli-dialog"
          isOpen={false}
          onClose={undefined}
          title="Download CLI Tool"
        >
          <withRouter(Connect(CLI))
            addApp={true}
          />
        </Blueprint.Dialog>,
        <withRouter(Connect(ReduxForm)) />,
      ],
      "className": "container-fluid pt-dark",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>,
            <div
              className="col-sm-6 text-right"
            />,
          ],
          "className": "row smd-pad-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Apps
              </h3>,
              "className": "col-sm-6",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Apps",
              },
              "ref": null,
              "rendered": "Apps",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
                undefined,
              ],
              "className": "col-sm-6 text-right",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
              undefined,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "app": Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canOutsideClickClose": true,
          "children": <withRouter(Connect(CLI))
            addApp={true}
          />,
          "className": "pt-dark cli-dialog",
          "isOpen": false,
          "onClose": undefined,
          "title": "Download CLI Tool",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "addApp": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row smd-pad-12"
          >
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>
            <div
              className="col-sm-6 text-right"
            />
          </div>,
          <div>
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />
          </div>,
          <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark cli-dialog"
            isOpen={false}
            onClose={undefined}
            title="Download CLI Tool"
          >
            <withRouter(Connect(CLI))
              addApp={true}
            />
          </Blueprint.Dialog>,
          <withRouter(Connect(ReduxForm)) />,
        ],
        "className": "container-fluid pt-dark",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-6"
              >
                <h3>
                  Apps
                </h3>
              </div>,
              <div
                className="col-sm-6 text-right"
              />,
            ],
            "className": "row smd-pad-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Apps
                </h3>,
                "className": "col-sm-6",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Apps",
                },
                "ref": null,
                "rendered": "Apps",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  undefined,
                  undefined,
                ],
                "className": "col-sm-6 text-right",
              },
              "ref": null,
              "rendered": Array [
                undefined,
                undefined,
                undefined,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ApplicationCard))
                app={
                  Object {
                    "address": "e80b681c42f831ea3c4b8db531f5e165",
                    "appName": "dAPP",
                    "isLoading": true,
                    "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                    "version": "1.0",
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "function",
              "props": Object {
                "app": Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canOutsideClickClose": true,
            "children": <withRouter(Connect(CLI))
              addApp={true}
            />,
            "className": "pt-dark cli-dialog",
            "isOpen": false,
            "onClose": undefined,
            "title": "Download CLI Tool",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "addApp": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Applications: index component with initial values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Applications
    applications={Array []}
    fetchApplications={[Function]}
    location={
      Object {
        "search": "?developer",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row smd-pad-12"
        >
          <div
            className="col-sm-6"
          >
            <h3>
              Apps
            </h3>
          </div>
          <div
            className="col-sm-6 text-right"
          />
        </div>,
        <div>
          <div
            className="row"
            style={
              Object {
                "paddingBottom": "40px",
              }
            }
          >
            <div
              className="col-sm-12 text-center"
            >
              No Applications found
            </div>
          </div>
        </div>,
        <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark cli-dialog"
          isOpen={false}
          onClose={undefined}
          title="Download CLI Tool"
        >
          <withRouter(Connect(CLI))
            addApp={true}
          />
        </Blueprint.Dialog>,
        <withRouter(Connect(ReduxForm)) />,
      ],
      "className": "container-fluid pt-dark",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>,
            <div
              className="col-sm-6 text-right"
            />,
          ],
          "className": "row smd-pad-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Apps
              </h3>,
              "className": "col-sm-6",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Apps",
              },
              "ref": null,
              "rendered": "Apps",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
                undefined,
              ],
              "className": "col-sm-6 text-right",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
              undefined,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row"
            style={
              Object {
                "paddingBottom": "40px",
              }
            }
          >
            <div
              className="col-sm-12 text-center"
            >
              No Applications found
            </div>
          </div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-sm-12 text-center"
            >
              No Applications found
            </div>,
            "className": "row",
            "style": Object {
              "paddingBottom": "40px",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No Applications found",
              "className": "col-sm-12 text-center",
            },
            "ref": null,
            "rendered": "No Applications found",
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canOutsideClickClose": true,
          "children": <withRouter(Connect(CLI))
            addApp={true}
          />,
          "className": "pt-dark cli-dialog",
          "isOpen": false,
          "onClose": undefined,
          "title": "Download CLI Tool",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "addApp": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row smd-pad-12"
          >
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>
            <div
              className="col-sm-6 text-right"
            />
          </div>,
          <div>
            <div
              className="row"
              style={
                Object {
                  "paddingBottom": "40px",
                }
              }
            >
              <div
                className="col-sm-12 text-center"
              >
                No Applications found
              </div>
            </div>
          </div>,
          <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark cli-dialog"
            isOpen={false}
            onClose={undefined}
            title="Download CLI Tool"
          >
            <withRouter(Connect(CLI))
              addApp={true}
            />
          </Blueprint.Dialog>,
          <withRouter(Connect(ReduxForm)) />,
        ],
        "className": "container-fluid pt-dark",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-6"
              >
                <h3>
                  Apps
                </h3>
              </div>,
              <div
                className="col-sm-6 text-right"
              />,
            ],
            "className": "row smd-pad-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Apps
                </h3>,
                "className": "col-sm-6",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Apps",
                },
                "ref": null,
                "rendered": "Apps",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  undefined,
                  undefined,
                ],
                "className": "col-sm-6 text-right",
              },
              "ref": null,
              "rendered": Array [
                undefined,
                undefined,
                undefined,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row"
              style={
                Object {
                  "paddingBottom": "40px",
                }
              }
            >
              <div
                className="col-sm-12 text-center"
              >
                No Applications found
              </div>
            </div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="col-sm-12 text-center"
              >
                No Applications found
              </div>,
              "className": "row",
              "style": Object {
                "paddingBottom": "40px",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No Applications found",
                "className": "col-sm-12 text-center",
              },
              "ref": null,
              "rendered": "No Applications found",
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canOutsideClickClose": true,
            "children": <withRouter(Connect(CLI))
              addApp={true}
            />,
            "className": "pt-dark cli-dialog",
            "isOpen": false,
            "onClose": undefined,
            "title": "Download CLI Tool",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "addApp": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Applications: index componentWillUnmount 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Applications
    applications={
      Array [
        Object {
          "address": "e80b681c42f831ea3c4b8db531f5e165",
          "appName": "dAPP",
          "isLoading": true,
          "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
          "version": "1.0",
        },
      ]
    }
    fetchApplications={[Function]}
    location={
      Object {
        "search": "?developer",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row smd-pad-12"
        >
          <div
            className="col-sm-6"
          >
            <h3>
              Apps
            </h3>
          </div>
          <div
            className="col-sm-6 text-right"
          />
        </div>,
        <div>
          <withRouter(Connect(ApplicationCard))
            app={
              Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              }
            }
          />
        </div>,
        <Blueprint.Dialog
          canOutsideClickClose={true}
          className="pt-dark cli-dialog"
          isOpen={false}
          onClose={undefined}
          title="Download CLI Tool"
        >
          <withRouter(Connect(CLI))
            addApp={true}
          />
        </Blueprint.Dialog>,
        <withRouter(Connect(ReduxForm)) />,
      ],
      "className": "container-fluid pt-dark",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>,
            <div
              className="col-sm-6 text-right"
            />,
          ],
          "className": "row smd-pad-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Apps
              </h3>,
              "className": "col-sm-6",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Apps",
              },
              "ref": null,
              "rendered": "Apps",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
                undefined,
              ],
              "className": "col-sm-6 text-right",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
              undefined,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "app": Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "canOutsideClickClose": true,
          "children": <withRouter(Connect(CLI))
            addApp={true}
          />,
          "className": "pt-dark cli-dialog",
          "isOpen": false,
          "onClose": undefined,
          "title": "Download CLI Tool",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "addApp": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row smd-pad-12"
          >
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>
            <div
              className="col-sm-6 text-right"
            />
          </div>,
          <div>
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />
          </div>,
          <Blueprint.Dialog
            canOutsideClickClose={true}
            className="pt-dark cli-dialog"
            isOpen={false}
            onClose={undefined}
            title="Download CLI Tool"
          >
            <withRouter(Connect(CLI))
              addApp={true}
            />
          </Blueprint.Dialog>,
          <withRouter(Connect(ReduxForm)) />,
        ],
        "className": "container-fluid pt-dark",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-6"
              >
                <h3>
                  Apps
                </h3>
              </div>,
              <div
                className="col-sm-6 text-right"
              />,
            ],
            "className": "row smd-pad-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Apps
                </h3>,
                "className": "col-sm-6",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Apps",
                },
                "ref": null,
                "rendered": "Apps",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  undefined,
                  undefined,
                ],
                "className": "col-sm-6 text-right",
              },
              "ref": null,
              "rendered": Array [
                undefined,
                undefined,
                undefined,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ApplicationCard))
                app={
                  Object {
                    "address": "e80b681c42f831ea3c4b8db531f5e165",
                    "appName": "dAPP",
                    "isLoading": true,
                    "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                    "version": "1.0",
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "function",
              "props": Object {
                "app": Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "canOutsideClickClose": true,
            "children": <withRouter(Connect(CLI))
              addApp={true}
            />,
            "className": "pt-dark cli-dialog",
            "isOpen": false,
            "onClose": undefined,
            "title": "Download CLI Tool",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "addApp": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Applications: index mapStateToProps with default state 1`] = `
Object {
  "applications": Array [],
  "isLoggedIn": false,
  "isTokenOpen": false,
}
`;
